--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-       <android.support.v7.widget.RecyclerView
-           android:id="@+id/mygoal"
-           android:scrollbars="vertical"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    tools:context="com.hit.wegoal.goalpage">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="4dp">
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mygoal"
+        android:scrollbars="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addgoal"
+        app:backgroundTint="#1296db"
+        app:rippleColor="#1296db"
+        android:src="@mipmap/addgoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/add"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginTop="550dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-</RelativeLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="22dp"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+</android.support.design.widget.CoordinatorLayout>
