--- a/app/src/main/res/layout/goal_item.xml
+++ b/app/src/main/res/layout/goal_item.xml
@@ -1,22 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:weightSum="1"
+    android:gravity="center"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/goalname"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="0.4"
-        android:layout_height="match_parent" />
-    <TextView
-        android:id="@+id/deadline"
-        android:layout_width="0dp"
-        android:layout_weight="0.4"
-        android:layout_height="match_parent" />
-    <ImageButton
-        android:src="@mipmap/add"
-        android:id="@+id/addsubgoal"
-        android:layout_width="0dp"
-        android:layout_weight="0.2"
-        android:layout_height="match_parent" />
-
+        android:layout_weight="0.9"
+        android:padding="8dp"
+        android:background="@drawable/goal_item"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:text="目标"
+                android:textColor="#1296db"
+                android:textSize="18dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/goalname"
+                android:textSize="16dp"
+                android:paddingLeft="18dp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="保质期"
+                android:textColor="#1296db"
+                android:textSize="18dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/deadline"
+                android:textSize="14dp"
+                android:paddingLeft="20dp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:src="@mipmap/addremind"
+                android:id="@+id/addremind"
+                android:background="#ffffff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.09"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.02"/>
+            <ImageButton
+                android:src="@mipmap/addsubgoal"
+                android:id="@+id/addsubgoal"
+                android:background="#ffffff"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.09"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
