--- a/app/src/main/res/layout/subgoal_item.xml
+++ b/app/src/main/res/layout/subgoal_item.xml
@@ -1,42 +1,76 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:weightSum="1"
+    android:gravity="center"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-      <TextView
-        android:id="@+id/showsubgoalname"
         android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:layout_height="match_parent" />
-
-      <TextView
-        android:id="@+id/showdeadline"
-        android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:layout_height="match_parent" />
-
+        android:layout_weight="0.9"
+        android:padding="8dp"
+        android:background="@drawable/goal_item"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="子目标："
+                    android:textColor="#1296db"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/showsubgoalname"
+                    android:textSize="16dp"
+                    android:paddingLeft="18dp"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="截止日期："
+                    android:textColor="#1296db"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/showdeadline"
+                    android:textSize="14dp"
+                    android:paddingLeft="20dp"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="当前进度："
+                    android:textColor="#1296db"
+                    android:textSize="18dp"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/scheduleinnum"
+                    android:textSize="14dp"
+                    android:paddingLeft="20dp"
+                    android:textColor="#000000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <SeekBar
+                android:id="@+id/schedule"
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
+        </LinearLayout>
     </LinearLayout>
-
-    <SeekBar
-        android:id="@+id/id_seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="35dp" />
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="当前进度："
-            android:layout_width="0dp"
-            android:layout_weight="0.2"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.8"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
 </LinearLayout>
+
