--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -5,15 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hit.wegoal.goalpage">
+
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="4dp">
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.Toolbar
+            app:theme="@style/toolBar"
+            app:titleTextColor="#ffffff"
+            android:id="@+id/goaltoolbar"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:layout_width="match_parent"
+            android:background="#1296db"
+            android:minHeight="?android:attr/actionBarSize">
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mygoal"
+            android:scrollbars="vertical"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent" />
+
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mygoal"
-        android:scrollbars="vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addgoal"
