--- a/app/src/main/res/layout/goal_item.xml
+++ b/app/src/main/res/layout/goal_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
-                android:text="目标"
+                android:text="目标："
                 android:textColor="#1296db"
                 android:textSize="18dp"
                 android:layout_height="wrap_content" />
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="match_parent"
-                android:text="保质期"
+                android:text="保质期："
                 android:textColor="#1296db"
                 android:textSize="18dp"
                 android:layout_height="wrap_content" />
